# text_editor

./: .gitignore  CMakeLists.txt
asset/: feh_084155_000001_filelist  feh_084430_000005_filelist
include/: document.h  editor.h  font.h  render.h  renderer.h
source/: document.cpp  editor.cpp  font.cpp  log.h  main.cpp  renderer.cpp
